<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="@color/background_silver">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="My Nanodegree Apps"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="@color/button_orange"
        android:textStyle="bold"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spotify_button"
            android:id="@+id/spotify"
            android:background="@color/button_orange"
            android:textColor="@color/font_silver"
            android:layout_marginTop="62dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:onClick="showToast"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scores_button"
            android:id="@+id/scores"
            android:background="@color/button_orange"
            android:textColor="@color/font_silver"
            android:layout_above="@+id/library"
            android:layout_alignLeft="@+id/spotify"
            android:layout_alignStart="@+id/spotify"
            android:layout_marginBottom="27dp"
            android:layout_alignRight="@+id/spotify"
            android:layout_alignEnd="@+id/spotify"
            android:onClick="showToast"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/library_button"
            android:id="@+id/library"
            android:background="@color/button_orange"
            android:textColor="@color/font_silver"
            android:layout_centerVertical="true"
            android:layout_alignLeft="@+id/scores"
            android:layout_alignStart="@+id/scores"
            android:layout_alignRight="@+id/scores"
            android:layout_alignEnd="@+id/scores"
            android:onClick="showToast"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/build_it_bigger_button"
            android:id="@+id/build_it_bigger"
            android:background="@color/button_orange"
            android:textColor="@color/font_silver"
            android:layout_marginTop="25dp"
            android:layout_below="@+id/library"
            android:layout_alignLeft="@+id/library"
            android:layout_alignStart="@+id/scores"
            android:layout_alignRight="@+id/scores"
            android:layout_alignEnd="@+id/library"
            android:onClick="showToast"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/xyz_reader_button"
            android:id="@+id/xyz"
            android:background="@color/button_orange"
            android:textColor="@color/font_silver"
            android:layout_above="@+id/capstone"
            android:layout_alignRight="@+id/library"
            android:layout_alignEnd="@+id/library"
            android:layout_marginTop="25dp"
            android:layout_alignLeft="@+id/library"
            android:layout_alignStart="@+id/library"
            android:onClick="showToast"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/capstone_button"
            android:id="@+id/capstone"
            android:background="@color/button_orange"
            android:textColor="@color/font_silver"
            android:layout_alignParentBottom="true"
            android:layout_alignLeft="@+id/library"
            android:layout_marginTop="25dp"
            android:layout_alignRight="@+id/library"
            android:layout_alignEnd="@+id/library"
            android:onClick="showToast"
            />
    </RelativeLayout>

</RelativeLayout>
